2021-07-28 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: PATCHLEVEL++
	* INSTALL, PRE_BUILD, patches/bzip2-pkg-config.patch: added patch for .pc files,
	  symlinks are handled by makefiles now

2019-07-14 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: version 1.0.8

2019-07-01 Pavel Vinogradov <public@sourcemage.org>
	* DETAILS: updated to 1.0.7, SECURITY_PATCH++, (CVE-2016-3189).
	  switched to sourceware.org url and to UPSTREAM_HASH
	* INSTALL, PRE_BUILD, patches/*: rollbacked to normal versioned
	  symlinking, dropped the patches

2019-06-28 Florian Franzmann <bwlf@bandrate.org>
	* INSTALL, DETAILS, PRE_BUILD, patches/*: apply patches that get us to version 1.0.7
	  There doesn't seem to be a tarball for 1.0.7 but it fixes CVE-2019-12900.
	  SECURITY_PATCH++, PATCHLEVEL++

2019-01-19  Treeve Jelbert <treeve@sourcemage.org>
	* DEPENDS: delete gnupg

2015-12-24 Vlad Glagolev <stealth@sourcemage.org>
	* DETAILS: PATCHLEVEL++
	* INSTALL: added missing symlink

2010-09-20 Florian Franzmann <bwlf@bandrate.org>
	* DETAILS: updated to 1.0.6, SECURITY_PATCH=2,
	  fixes CVE-2010-0405

2008-03-20 Florian Franzmann <bwlf@bandrate.org>
	* PRE_BUILD, DETAILS: updated to 1.0.5, SECURITY_PATCH=1

2007-02-05 Thomas Orgis <sobukus@sourcemage.org>
	* BUILD, INSTALL: make the install to /bin an opt-in, default
	  being install to /usr/bin
	* DETAILS: again patchlevel for the change

2007-02-03 Thomas Orgis <sobukus@sourcemage.org>
	* BUILD, INSTALL: no need to rm -f installed files in BUILD (anymore),
	  install binaries to /bin as bzip2 is considered to be a basic system
	  tool perhaps needed by admin to restore system without having /usr
	* DETAILS: deserves a patchlevel

2007-01-07 George Sherwood <george@beernabeer.com>
	* DETAILS: Updated to version 1.0.4
	* BUILD: Updated sedit to allow $CFLAGS to be inserted correctly
	* INSTALL: Added symlink for libbz2.so.1.0

2006-07-28 Treeve Jelbert <treeve@sourcemage.org>
	* DETAILS: PATCHLEVEL=1