@@ -65,11 +65,11 @@ index 1f0739b..0c94517 100644
 +
 +install:
 +	if ( test ! -d $(PREFIX)/lib ) ; then mkdir -p $(PREFIX)/lib ; fi
-+	cp -f libbz2.so.$(VERSION)              $(PREFIX)/lib
++	cp -fa libbz2.so.$(VERSION)              $(PREFIX)/lib
 +	chmod a+r                               $(PREFIX)/lib/libbz2.so.$(VERSION)
-+	cp -f libbz2.so.$(MAJOR_MINOR_VERSION)  $(PREFIX)/lib
-+	cp -f libbz2.so.$(MAJOR_VERSION)        $(PREFIX)/lib
-+	cp -f libbz2.so                         $(PREFIX)/lib
++	cp -fa libbz2.so.$(MAJOR_MINOR_VERSION)  $(PREFIX)/lib
++	cp -fa libbz2.so.$(MAJOR_VERSION)        $(PREFIX)/lib
++	cp -fa libbz2.so                         $(PREFIX)/lib
 +	if ( test ! -d $(PREFIX)/lib/pkgconfig ) ; then mkdir -p $(PREFIX)/lib/pkgconfig ; fi
 +	sed -e "s/@@VERSION@@/$(VERSION)/g;s#@@PREFIX@@#$(PREFIX)#g" bzip2.pc.in  > $(PREFIX)/lib/pkgconfig/bzip2.pc
 +	sed -e "s/@@VERSION@@/$(VERSION)/g;s#@@PREFIX@@#$(PREFIX)#g" libbz2.pc.in > $(PREFIX)/lib/pkgconfig/libbz2.pc
