@@ -1,3 +1,7 @@
+2023-11-14  Treeve Jelbert <treeve@sourcemage.org>
+	* patches/bzip2-pkg-config.patch: tweak
+	  prevents 'ldconfig: /usr/lib/libbz2.so.1.0 is not a symbolic link' messages
+
 2021-07-28 Pavel Vinogradov <public@sourcemage.org>
 	* DETAILS: PATCHLEVEL++
 	* INSTALL, PRE_BUILD, patches/bzip2-pkg-config.patch: added patch for .pc files,
